--- a/pepeizqs deals web/Pages/Componentes/Admin/Noticia.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Noticia.razor
@@ -395,9 +395,9 @@
 		}
 	}
 
-	private void EnviarTwitter(MouseEventArgs e)
+	private async void EnviarTwitter(MouseEventArgs e)
 	{
-		Herramientas.RedesSociales.Twitter.Twitear(noticia);
+		await Herramientas.RedesSociales.Twitter.Twitear(noticia);
 	}
 
 	private void EnviarBlueSky(MouseEventArgs e)
