--- a/pepeizqs deals web/Pages/Componentes/Interfaz/CajaJuego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Interfaz/CajaJuego.razor
@@ -55,6 +55,26 @@
 	}
 </style>
 
+<script>
+	function hoverTooltip2(e, id, id2) {
+        var x = e.clientX,
+            y = e.clientY;
+
+        var tooltip = document.getElementById(id);
+
+        if (screen.width / 2 > x) {
+            tooltip.style.top = (y + 10) + 'px';
+            tooltip.style.left = (x + 20) + 'px';
+        }
+        else {
+            tooltip.style.top = (y - 10) + 'px';
+            tooltip.style.left = (x - 20 - tooltip.getBoundingClientRect().width) + 'px';
+        };
+
+		document.getElementById(id2).load();
+    };
+</script>
+
 @{
 	int idMaestra = juego.IdMaestra;
 
@@ -158,13 +178,13 @@
 	int numeroTipo = (int)tipo;
 	Herramientas.ToolTipDatos tooltip = Herramientas.Tooltip.Generar(idioma, juego, drmUsar, usuarioConectado, usuarioTieneJuego, usuarioTieneDeseado, idBundle);
 
-	<div class="tooltip-juego" onmousemove="hoverTooltip(event, 'tooltip-@numeroTipo-@idMaestra.ToString()-@drmUsar.ToString()')">
+	<div class="tooltip-juego" onmousemove="hoverTooltip2(event, 'tooltip-@numeroTipo-@idMaestra.ToString()-@drmUsar.ToString()', 'video-@numeroTipo-@idMaestra.ToString()-@drmUsar.ToString()')">
 		<div id="tooltip-@numeroTipo-@idMaestra.ToString()-@drmUsar.ToString()" class="tooltip-relleno">
 			@if (string.IsNullOrEmpty(tooltip.Video) == false)
 			{
 				string videoMostrar = tooltip.Video;
 
-				<video onloadedmetadata="this.muted=true" playsinline autoplay loop muted style="width: 460px; height: 215px; object-fit: cover;">
+				<video id="video-@numeroTipo-@idMaestra.ToString()-@drmUsar.ToString()" onloadedmetadata="this.muted=true" playsinline autoplay loop muted style="width: 460px; height: 215px; object-fit: cover;">
 					<source src="@videoMostrar" type="video/mp4" />
 					<source src="@videoMostrar.Replace(".mp4", ".webm")" type="video/webm" />	
 				</video>
